# adafruit_max31865

./: Cargo.toml
example/embassy-rp/: Cargo.toml
example/embassy-rp/.cargo/: config.toml
example/embassy-rp/src/: main.rs
src/: lib.rs
