[package]
name = "adafruit_max31865_embassy_rp"
version = "0.1.0"
edition = "2024"

[dependencies]
adafruit_max31865 = { path = "../..", features = ["async"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus   = { version = "0.3", features = ["async"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }


[profile.release]
debug = 0
opt-level = 'z'
lto = true
codegen-units = 1